codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_apply_patch_scroll_vt100.snap
---
source: tui/src/pager_overlay.rs
expression: snapshot
---
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / / / / / /
Added foo.txt
Added 2 lines, removed 0 lines
1 + hello
2 + world

Added foo.txt
Added 2 lines, removed 0 lines
─────────────────────────────────────────────────────────────────────────── 0% ─
 ↑/↓ to scroll   pgup (fn + ↑)/pgdn (fn + ↓) to page   home (fn + ←)/end (fn + →
 q to quit   esc to edit prev
